[package]
name = "enclone_denovo"
version = "0.5.216"
authors = ["""David Jaffe <david.jaffe@10xgenomics.com>,
              Nigel Delaney <nigel.delaney@10xgenomics.com>,
              Keri Dockter <keri.dockter@10xgenomics.com>,
              Jessica Hamel <jessica.hamel@10xgenomics.com>,
              Lance Hepler <lance.hepler@10xgenomics.com>,
              Shaun Jackman <shaun.jackman@10xgenomics.com>,
              Sreenath Krishnan <sreenath.krishnan@10xgenomics.com>,
              Meryl Lewis <meryl.lewis@10xgenomics.com>,
              Alvin Liang <alvin.liang@10xgenomics.com>,
              Patrick Marks <patrick.marks@10xgenomics.com>,
              Wyatt McDonnell <wyatt.mcdonnell@10xgenomics.com>"""]
edition = "2018"
publish = false

[dependencies]
amino = { version = "0.1", git = "https://github.com/DavidBJaffe/rust-toolbox.git" }
binary_vec_io = { version = "0.1", git = "https://github.com/DavidBJaffe/rust-toolbox.git" }
bio = "1"
debruijn = "0.3"
equiv = { version = "0.1", git = "https://github.com/DavidBJaffe/rust-toolbox.git" }
fasta_tools = { version = "0.1", git = "https://github.com/DavidBJaffe/rust-toolbox.git" }
flate2 = "1"
graph_simple = { version = "0.1", git = "https://github.com/DavidBJaffe/rust-toolbox.git" }
hyperbase = { version = "0.1", git = "https://github.com/DavidBJaffe/rust-toolbox.git" }
io_utils = { version = "0.3", git = "https://github.com/DavidBJaffe/rust-toolbox.git" }
itertools = "0.10"
kmer_lookup = { version = "0.1", git = "https://github.com/DavidBJaffe/rust-toolbox.git" }
# poa_hmm = { git = "https://github.com/ban-m/partial_order_alignment.git" }
perf_stats = { version = "0.1", git = "https://github.com/DavidBJaffe/rust-toolbox.git" }
permutation = "0.4"
petgraph = "0.6"
pretty_trace = { version = "0.5", git = "https://github.com/DavidBJaffe/rust-toolbox.git" }
rayon = "1"
regex = { version = "1", default-features = false, features = ["std", "perf"] }
serde_json = "1"
stats_utils = { version = "0.1", git = "https://github.com/DavidBJaffe/rust-toolbox.git" }
string_utils = { version = "0.1", git = "https://github.com/DavidBJaffe/rust-toolbox.git" }
superslice = "1"
tables = { version = "0.1", git = "https://github.com/DavidBJaffe/rust-toolbox.git" }
vdj_ann = { version = "0.4", git = "https://github.com/DavidBJaffe/rust-toolbox.git" }
vdj_ann_ref = { version = "0.2", git = "https://github.com/DavidBJaffe/rust-toolbox.git" }
vector_utils = { version = "0.1", git = "https://github.com/DavidBJaffe/rust-toolbox.git" }
